tests/type_tests/negatives/immutable_arguments.py
from pfun import Immutable


class C(Immutable):
    a: int


C('')
